# aac

./: .gitignore  CMakeLists.txt
resource/: z.aac
src/: CMakeLists.txt  main.cpp
src/ICS/: CMakeLists.txt  ICS.cpp  ICS.h
src/adtsData/: CMakeLists.txt  adtsData.cpp  adtsData.h
src/adtsHeader/: CMakeLists.txt  adtsHeader.cpp  adtsHeader.h
src/decoder/: CMakeLists.txt  decoder.cpp  decoder.h
src/huffman/: CMakeLists.txt  huffman.cpp  huffman.h
